--- a/index.html
+++ b/index.html
@@ -4,7 +4,209 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header_menu">
+        <ul class="header_links_list">
+          <li class="header_links_list_item header_links_list_item_no_bullit">
+            <a href="#0" class="header_link header_link_active">главная</a>
+          </li>
+          <li class="header_links_list-item">
+            <a href="#lots" class="header_link">посмотреть лоты</a>
+          </li>
+          <li class="header_links_list_item">
+            <a href="#about" class="header_link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <a class="header_logo" href="#0">
+        <img
+          class="header_logo_image"
+          src="./images/logo-black.svg"
+          alt="оно тебе надо черными бувами на белом фоне"
+        />
+      </a>
+
+      <address class="address header_address">
+        <a href="tel:+99995555555" class="address_link">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="address_link">info@sobaka.ge</a>
+        <p class="address_text">
+          наб. Принсенграхт 263-<br />
+          -265, Амстердам
+        </p>
+      </address>
+    </header>
+
+    <main class="main">
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover_title">
+  <span class="cover_text cover_text_left">оно</span>
+  <span class="cover_text cover_text_center">тебе</span>
+  <span class="cover_text cover_text_right">надо</span>
+        </h1>
+        <div class="cover_description">
+          <p class="cover_description_text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet_button" type="button">Сделать ставку</button>
+        </div>
+      </section>
+
+      <section class="lots">
+        <h2 class="lots_heading">Лоты</h2>
+        <ul class="lots_card_list">
+          <li class="lots_card_list_item">
+            <a href="#0" class="card_link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card_title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card_text">
+                  Не просто бросил, 
+                  а ушёл с первой лекции. 
+                  Какой была бы ваша ставка, если бы вы не знали,
+                   что режиссёр — Пол Томас Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <li class="lots_card_list_item">
+            <a href="#0" class="card_link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card_title">
+                  Книга, где описан один скучный день
+                   из жизни рекламного агента
+                </h3>
+                <p class="card_text">
+                  Объёмом почти в тысячу страниц. 
+                  Иногда без знаков препинания и с переходами 
+                  на древнеанглийский. В ней одновременно рассказывается 
+                  о 16 июня 1904 года и об истории литературы, 
+                  начиная с античных времён. И это всё накладывается на 
+                  эпическую поэму Гомера. 
+                  Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <li class="lots_card_list_item">
+            <a href="#0" class="card_link">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card_title">
+                  Картина, которую повторит 
+                  даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card_text">
+                  Ну действительно, там линия, тут кружочек, а здесь
+                   и вовсе что-то похожее на инфузорию-туфельку. 
+                   Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, 
+                   если бы не знали, что это — 
+                  одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="#0" class="lots_look_more_link">Посмотреть больше</a>
+      </section>
+
+      <section class="about" id="about">
+        <div class="about_column">
+          <div class="about_logo">
+            <img
+              src="images/logo-white.svg"
+              alt="белый логотип оно тебе надо в круге"
+              class="about_logo_image"
+            />
+          </div>
+        </div>
+        <div class="about_column about_column_content">
+          <h2 class="about_title">Об аукционе</h2>
+          <div class="about_text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно 
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. 
+              Потому что кому нужен дневник девочки-подростка или картина, 
+              которую может нарисовать даже ребёнок? 
+              Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. 
+              Опережающие своё время. В пух и прах растерзанные критиками. 
+              Непринятые и непонятые. Когда-то они казались просто неудачными. 
+              Но, несмотря на критику, кажущуюся простоту или сложность, 
+              сейчас без этих лотов невозможно представить современную культуру. 
+              Когда в эти вещи не верил никто, продолжали верить их создатели. 
+              И сейчас эти лоты стали культовыми. 
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <address class="address footer_address">
+        <a href="tel:+99995555555" class="address__link">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="address__link">info@sobaka.ge</a>
+        <p class="address__text">
+          наб. Принсенграхт 263-265,<br />
+          Амстердам
+        </p>
+      </address>
+
+      <nav class="footer_menu">
+        <ul class="footer_menu_list">
+          <li class="footer_menu_list_item">
+            <a href="#0" class="footer_menu_link footer_menu_link_active">
+              главная
+            </a>
+          </li>
+          <li class="footer_menu_list_item">
+            <a href="#lots" class="footer_menu_link">посмотреть лоты</a>
+          </li>
+          <li class="footer_menu_list_item">
+            <a href="#about" class="footer_menu_link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="footer_social_list">
+        <li class="footer_social_list_item">
+          <a href="#0" class="footer_social_link">
+            <img
+              src="./images/yt.svg"
+              alt="YouTube"
+              class="footer_social_icon"
+            />
+          </a>
+        </li>
+        <li class="footer_social_list_item">
+          <a href="#0" class="footer_social_link">
+            <img src="./images/vk.svg" alt="VK" class="footer_social_icon" />
+          </a>
+        </li>
+        <li class="footer_social_list_item">
+          <a href="#0" class="footer_social_link">
+            <img
+              src="./images/pinterest.svg"
+              alt="Pinterest"
+              class="footer_social_icon"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
