большое спасибо за совет по пиксель перфект

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body>
+  <body class="page">
     <header class="header">
       <nav class="header_menu">
         <ul class="header_links_list">
           <li class="header_links_list_item header_links_list_item_no_bullit">
             <a href="#0" class="header_link header_link_active">главная</a>
           </li>
-          <li class="header_links_list-item">
+          <li class="header_links_list_item">
             <a href="#lots" class="header_link">посмотреть лоты</a>
           </li>
           <li class="header_links_list_item">
@@ -38,7 +38,7 @@
         <a href="mailto:info@sobaka.ge" class="address_link">info@sobaka.ge</a>
         <p class="address_text">
           наб. Принсенграхт 263-<br />
-          -265, Амстердам
+          265, Амстердам
         </p>
       </address>
     </header>
@@ -119,7 +119,7 @@
             </a>
           </li>
         </ul>
-        <a href="#0" class="lots_look_more_link">Посмотреть больше</a>
+        <a href="#0" class="lots_look_more_link">посмотреть больше</a>
       </section>
 
       <section class="about" id="about">
@@ -137,19 +137,16 @@
           <div class="about_text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно 
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. 
-              Потому что кому нужен дневник девочки-подростка или картина, 
-              которую может нарисовать даже ребёнок? 
-              Кому нужны все эти странные вещи, созданные любителями?
+              дорогого антиквариата. Наши лоты вообще не должны были попасть 
+              ни на один аукцион. Потому что кому нужен дневник девочки- <br>подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
             </p>
             <p>
-              Слишком сложные или, наоборот, слишком простые. 
-              Опережающие своё время. В пух и прах растерзанные критиками. 
-              Непринятые и непонятые. Когда-то они казались просто неудачными. 
-              Но, несмотря на критику, кажущуюся простоту или сложность, 
-              сейчас без этих лотов невозможно представить современную культуру. 
-              Когда в эти вещи не верил никто, продолжали верить их создатели. 
-              И сейчас эти лоты стали культовыми. 
+              Слишком сложные или, наоборот, слишком простые. Опережающие 
+              своё время. В пух и прах растерзанные критиками. Непринятые и 
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно 
+              представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их 
+              создатели. И сейчас эти лоты стали культовыми. 
             </p>
           </div>
         </div>
@@ -158,9 +155,9 @@
 
     <footer class="footer">
       <address class="address footer_address">
-        <a href="tel:+99995555555" class="address__link">+9 999 555 5555</a>
-        <a href="mailto:info@sobaka.ge" class="address__link">info@sobaka.ge</a>
-        <p class="address__text">
+        <a href="tel:+99995555555" class="address_link">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="address_link">info@sobaka.ge</a>
+        <p class="address_text">
           наб. Принсенграхт 263-265,<br />
           Амстердам
         </p>
