извините что так долго, сильно заболел и с работы не отпустили

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img
           class="header_logo_image"
           src="./images/logo-black.svg"
-          alt="оно тебе надо черными бувами на белом фоне"
+          alt="оно тебе надо черными буквами на белом фоне"
         />
       </a>
 
@@ -37,7 +37,7 @@
         <a href="tel:+99995555555" class="address_link">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge" class="address_link">info@sobaka.ge</a>
         <p class="address_text">
-          наб. Принсенграхт 263-<br />
+          наб. Принсенграхт 263-<br/>
           265, Амстердам
         </p>
       </address>
@@ -47,10 +47,10 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover_title">
-  <span class="cover_text cover_text_left">оно</span>
-  <span class="cover_text cover_text_center">тебе</span>
-  <span class="cover_text cover_text_right">надо</span>
-        </h1>
+           <span class="cover_text cover_text_left">оно</span>
+           <span class="cover_text cover_text_center">теб<span class="no_letter_spacing">е</span></span>
+           <span class="cover_text cover_text_right">над<span class="no_letter_spacing">о</span></span>
+         </h1>
         <div class="cover_description">
           <p class="cover_description_text">
             Аукцион вещей, в которые никто не верил
@@ -131,8 +131,8 @@
               class="about_logo_image"
             />
           </div>
-        </div>
-        <div class="about_column about_column_content">
+
+            <div class="about_column_content">
           <h2 class="about_title">Об аукционе</h2>
           <div class="about_text">
             <p>
@@ -150,11 +150,12 @@
             </p>
           </div>
         </div>
-      </section>
+        </div>
+       </section>
     </main>
 
     <footer class="footer">
-      <address class="address footer_address">
+      <address class="address">
         <a href="tel:+99995555555" class="address_link">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge" class="address_link">info@sobaka.ge</a>
         <p class="address_text">
